[project]
name = "qwen-web-proxy"
version = "0.1.0"
description = "Qwen Chat website to OpenAI-compatible API proxy."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
qwen-proxy = "qwen_proxy.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
